--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -20,6 +20,9 @@
           </label>
         </div>
         <p id="status-text" class="popup__status" role="status" aria-live="polite"></p>
+        <button id="idle-enable" class="popup__button popup__button--outline" type="button" hidden>
+          Enable DocsFocus anyway
+        </button>
       </section>
       <section class="popup__section" id="site-section" hidden>
         <h2 class="popup__section-title" id="site-section-title">Site controls</h2>
