--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -29,10 +29,8 @@
         <div class="popup__site-controls">
           <label class="popup__hint" for="site-preset">Preset for this site</label>
           <select id="site-preset" class="popup__select" aria-label="DocsFocus preset for this domain">
-            <option value="global">Use global defaults</option>
-            <option value="balanced">Balanced</option>
+            <option value="deepfocus">Deep Focus</option>
             <option value="skim">Skim (fast scan)</option>
-            <option value="focus">Focus</option>
             <option value="custom">Custom</option>
           </select>
           <div class="popup__site-actions">
