change helpers to Focus instead of ADHD references

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -11,11 +11,11 @@
         <h1 class="popup__title">DocsFocus</h1>
         <p class="popup__subtitle">Focus tools for documentation</p>
       </header>
-      <section class="popup__section" aria-labelledby="adhd-toggle-label">
+      <section class="popup__section" aria-labelledby="focus-toggle-label">
         <div class="toggle" role="presentation">
-          <label class="toggle__label" id="adhd-toggle-label">
-            <span class="toggle__text">ADHD Mode</span>
-            <input type="checkbox" id="adhd-toggle" class="toggle__input" aria-describedby="status-text" />
+          <label class="toggle__label" id="focus-toggle-label">
+            <span class="toggle__text">Focus Mode</span>
+            <input type="checkbox" id="focus-toggle" class="toggle__input" aria-describedby="status-text" />
             <span class="toggle__slider" aria-hidden="true"></span>
           </label>
         </div>
