fixes and improvements

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -33,6 +33,15 @@
             <option value="skim">Skim (fast scan)</option>
             <option value="custom">Custom</option>
           </select>
+          <div class="popup__feature-toggle">
+            <label class="popup__feature-label" for="keyword-highlight-toggle">
+              <span class="popup__feature-text">Highlight Keywords</span>
+            </label>
+            <label class="popup__mini-toggle">
+              <input type="checkbox" id="keyword-highlight-toggle" class="popup__mini-toggle-input" />
+              <span class="popup__mini-toggle-slider" aria-hidden="true"></span>
+            </label>
+          </div>
           <div class="popup__site-actions">
             <button id="site-preset-apply" class="popup__button popup__button--small" type="button">Apply preset</button>
             <button id="site-preset-clear" class="popup__button popup__button--outline popup__button--small" type="button">Clear site overrides</button>
